--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Grimoire Automata</title>
   </head>
 
-<body></body>
+<body>
+  <h1>
+    Grimoire Automata
+  </h1>
+</body>
 
 </html>
