added a bit of css styling

--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Grimoire Automata</title>
-  </head>
+
+<head>
+  <meta charset="UTF-8">
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1"
+  >
+  <title>Grimoire Automata</title>
+  <link
+    rel="stylesheet"
+    href="min.css"
+  >
+</head>
 
 <body>
   <h1>
