fixed indent spaces

--- a/index.html
+++ b/index.html
@@ -2,22 +2,24 @@
 <html lang="en-US">
 
 <head>
-  <meta charset="UTF-8">
-  <meta
-    name="viewport"
-    content="width=device-width, initial-scale=1"
-  >
-  <title>Grimoire Automata</title>
-  <link
-    rel="stylesheet"
-    href="min.css"
-  >
+    <meta charset="UTF-8">
+    <meta
+        name="viewport"
+        content="width=device-width, initial-scale=1"
+    >
+    <title>Grimoire Automata</title>
+    <link
+        rel="stylesheet"
+        href="min.css"
+    >
 </head>
 
 <body>
-  <h1>
-    Grimoire Automata
-  </h1>
+    <h1>
+        Grimoire Automata
+    </h1>
+
+    Dreaming a world of adaptive automata.
 </body>
 
 </html>
