--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta charset="UTF-8">
     <meta
         name="viewport"
-        content="width=device-width, initial-scale=1"
+        content="width=device-width, , height=device-height, initial-scale=1.0"
     >
+    <meta
+        name="description"
+        content="Dreaming a world of adaptive automata."
+    />
     <title>Grimoire Automata</title>
     <link
         rel="stylesheet"
@@ -19,7 +23,7 @@
         Grimoire Automata
     </h1>
 
-    Dreaming a world of adaptive automata.
+    <h5>Dreaming a world of adaptive automata.</h5>
 </body>
 
 </html>
