fixed heading error

--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
         Grimoire Automata
     </h1>
 
-    <h5>Dreaming a world of adaptive automata.</h5>
+    <h6>
+        Dreaming a world of adaptive automata.
+    </h6>
+
 </body>
 
 </html>
